finished basic requirements

--- a/templates/workhours/edit.html
+++ b/templates/workhours/edit.html
@@ -2,6 +2,40 @@
 
 {% block content %}
 
-Hola edit
+<form method="POST" class="post-form" action="/update/{{workhour.id}}" enctype="multipart/form-data">
+    {% csrf_token %}
+
+    <input name="id" type="hidden" value="{{workhour.id}}">
+
+    <div class="container">
+        <br>
+        <div class="form-group row">
+            <label class="col-sm-1 col-form-label"></label>
+            <div class="col-sm-4">
+                <h3>Update Details</h3>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">Workday name:</label>
+            <div class="col-sm-4">
+                <input type="text" name="name" value="{{ workhour.name }}" />
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">Workhour code:</label>
+            <div class="col-sm-4">
+                <input type="text" name="code" value="{{ workhour.code }}" />
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-1 col-form-label"></label>
+            <div class="col-sm-4">
+                <button type="submit" class="btn btn-success">Update</button>
+            </div>
+        </div>
+    </div>
+
+
+</form>
 
 {% endblock %}
