--- a/templates/workhours/new.html
+++ b/templates/workhours/new.html
@@ -8,7 +8,7 @@
 
 <div class="jumbotron jumbotron-fluid">
     <form method="POST" class="post-form" action="/new" enctype="multipart/form-data">
-        <div class="d-flex justify-content-center">
+        <div class="text-center">
             {% csrf_token %}
             {{ form.as_p }}
         </div>
