--- a/templates/workhours/new.html
+++ b/templates/workhours/new.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="text-center">
-    <H2>Create new workday</H2>
+    <H2>Create new work shift</H2>
 </div>
 
 <div class="jumbotron jumbotron-fluid">
