--- a/templates/workhours/edit.html
+++ b/templates/workhours/edit.html
@@ -24,10 +24,58 @@
         <div class="d-flex justify-content-center">
             <label class="col-form-label">Workhour code: </label>
             <div class="">
-                <input type="text" name="code" value="{{ workhour.code }}" />
+                <input type="text" name="code" maxlength="2" value="{{ workhour.code }}" />
             </div>
         </div>
         <br>
+        <div class="d-flex justify-content-center">
+            <label class="col-form-label">From: </label>
+            <div class="">
+                <select name="day_start" id="day_start">
+                    <option value="MO" selected="">Monday</option>
+                    <option value="TU">Tuesday</option>
+                    <option value="WE">Wednesday</option>
+                    <option value="TH">Thursday</option>
+                    <option value="FR">Friday</option>
+                    <option value="SA">Saturday</option>
+                    <option value="SU">Sunday</option>
+                </select>
+            </div>
+        </div>
+        <br>
+        <div class="d-flex justify-content-center">
+            <label class="col-form-label">Up to: </label>
+            <div class="">
+                <select name="day_end" id="day_end">
+                    <option value="MO">Monday</option>
+                    <option value="TU">Tuesday</option>
+                    <option value="WE">Wednesday</option>
+                    <option value="TH">Thursday</option>
+                    <option value="FR" selected="">Friday</option>
+                    <option value="SA">Saturday</option>
+                    <option value="SU">Sunday</option>
+                </select>
+            </div>
+        </div>
+        <br>
+
+        <div class="d-flex justify-content-center">
+            <label class="col-form-label">Workshift starts at: </label>
+            <div class="">
+                <input type="time" name="start" value="{{ workhour.start }}" />
+            </div>
+            (AM | PM)
+        </div>
+        <br>
+        <div class="d-flex justify-content-center">
+            <label class="col-form-label">Workshift end at: </label>
+            <div class="">
+                <input type="time" name="end" value="{{ workhour.end }}" />
+            </div>
+            (AM | PM)
+        </div>
+        <br>
+
         <div class="d-flex justify-content-center">
             <label class="col-form-label"></label>
             <div class="">
